# censeo-v2

./: .dockerignore  .env  .gitignore  Makefile  README.md  docker-compose.override.yml  docker-compose.yml  sonar-project.properties  test.Dockerfile  test_docker_setup.py
.agent-os/: PRD.md
.agent-os/product/: mission-lite.md  mission.md  original-engineering-standards.md  original-prd.md  roadmap.md  tech-stack.md
.agent-os/product/recaps/: 2025-09-14-task-1-docker-environment-complete.md  2025-09-14-task-2-backend-foundation-complete.md  2025-09-14-task-3-frontend-foundation-complete.md  2025-09-15-task-4-session-management-complete.md
.agent-os/specs/2025-09-13-core-mvp-foundation/: spec-lite.md  spec.md  tasks.md
.agent-os/specs/2025-09-13-core-mvp-foundation/sub-specs/: api-spec.md  database-schema.md  deployment-guide.md  technical-spec.md
.agent-os/specs/2025-09-14-mvp-dev-environment/: spec-lite.md  spec.md  tasks.md
.agent-os/specs/2025-09-14-mvp-dev-environment/sub-specs/: api-spec.md  database-schema.md  technical-spec.md
.agent-os/standards/: best-practices.md  code-style.md  tech-stack.md
.agent-os/standards/code-style/: css-style.md  css-tailwind-style.md  django-api-style.md  django-models-style.md  javascript-style.md  jsx-style.md  python-style.md  typescript-style.md
.github/workflows/: backend-ci.yml  code-quality.yml  docker.yml  frontend-ci.yml  security.yml
backend/: .env.example  Dockerfile.dev  coverage.xml  manage.py  pyproject.toml  requirements.txt  test_backend_setup.py
backend/censeo/: asgi.py  urls.py  wsgi.py
backend/censeo/settings/: base.py  development.py  original.py
backend/core/: api_views.py  models.py  serializers.py  test_models.py  test_sessions.py  test_stories.py  test_views.py  urls.py  views.py
backend/core/migrations/: 0001_initial.py  0002_alter_user_managers.py
database/init/: init.sql
frontend/: .env.development  Dockerfile.dev  audit-ci.json  package-lock.json  package.json  tsconfig.json
frontend/public/: index.html  manifest.json
frontend/src/: App.tsx  index.css  index.tsx  setupTests.ts  test-setup.ts
frontend/src/__tests__/: App.test.tsx
frontend/src/components/: CenseoLogoImage.tsx  ErrorBoundary.tsx  Layout.tsx  StoryForm.tsx  StoryList.tsx  StoryManager.tsx
frontend/src/components/__tests__/: AuthContext.test.tsx  Layout.test.tsx  StoryForm.test.tsx  StoryList.test.tsx  StoryManager.test.tsx
frontend/src/components/auth/: AuthContext.tsx
frontend/src/pages/: CreateSessionPage.tsx  HomePage.tsx  JoinSessionPage.tsx  SessionPage.tsx
frontend/src/pages/__tests__/: HomePage.test.tsx
frontend/src/services/: api.ts
frontend/src/services/__tests__/: api.test.ts
frontend/src/theme/: theme.ts
frontend/src/types/: api.ts  auth.ts  session.ts  story.ts
